Fix url preview AXE and layout issue & add percy test (#9189)

--- a/res/css/views/rooms/_LinkPreviewWidget.pcss
+++ b/res/css/views/rooms/_LinkPreviewWidget.pcss
@@ -32,6 +32,7 @@ limitations under the License.
         display: flex;
         flex-wrap: wrap;
         row-gap: $spacing-8;
+        flex: 1;
 
         .mx_LinkPreviewWidget_image,
         .mx_LinkPreviewWidget_caption {
